Fix alignment issue

--- a/style.css
+++ b/style.css
@@ -45,9 +45,12 @@ label {
 #rate > input {
   width: 140px;
 }
+#rate > p {
+  width: 35px;
+}
 #time {
   position: relative;
-  right: 11rem;
+  right: 10.9rem;
 }
 button {
   margin: 1rem 0;
@@ -57,11 +60,6 @@ button {
 #highlight {
   background-color: yellow;
 }
-/* footer {
-  margin-top: 3rem;
-  padding-left: 5rem;
-  font-weight: bold;
-} */
 footer {
   margin-top: 3rem;
   display: flex;
